apps-5845 no provider factory